<resources>
    <string name="app_name">Movie X</string>
    <string name="sigin_in">Sign In</string>
    <string name="sigin_up">Sign Up</string>
    <string name="sigin_in_sub">Hi Welcome Back. your’ve been missed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_an_account">Dont nave an account?</string>
    <string name="or_sign_up_with">Or sign up with</string>

    <!-- Create new Account text -->
    <string name="name">Name</string>
    <string name="create_new_account">Create Account</string>
    <string name="agree_with">Agree with</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="create_new_account_sub">Fil your information below or register with your social account.</string>

    <!-- Create new Account text -->
    <string name="verify_code">Verify Code</string>
    <string name="welcome">Welcome Pharmacy</string>
    <string name="welcome_sub">Caring for Your Health, One Step at a Time</string>
    <string name="verify">Verify</string>
    <string name="verify_code_sub">Please enter the  code we just sent to email</string>
    <string name="email_demo">lyhorngson@gmail.com</string>
    <string name="did_not_receive_otp">Didn’t receive OTP?</string>
    <string name="resend_code">Resend Code</string>
    <string name="successful">Successful!</string>
    <string name="start_now">Start Now</string>
    <string name="successful_sub">You have success registered
in our app and start working in it.</string>


    <!-- Home Screen Text -->
    <string name="banner_title">Order Medicine</string>
    <string name="banner_title_sub">Upload Prescription and tell us what you need. We do the rest</string>

</resources>