<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="128dp"
        android:src="@drawable/ic_success"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/successful"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="225dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/space_16"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/successful_sub"
        android:textColor="@color/color_text_secondary"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_start_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:layout_marginStart="@dimen/font_size_24"
        android:layout_marginEnd="@dimen/font_size_24"
        android:background="@drawable/item_stoke_16"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="@dimen/space_14"
        android:text="@string/start_now"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>