<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/space_24">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sigin_in"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sigin_in_sub"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/item_stoke_8"
                android:hint="Enter your email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/font_size_12"
                android:padding="@dimen/space_16"
                android:textColor="#333333"
                android:textColorHint="#AAAAAA" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_18"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/item_stoke_8"
                    android:hint="Enter your password"
                    android:inputType="textPassword"
                    android:padding="@dimen/space_16"
                    android:paddingTop="20dp"
                    android:textColor="#333333"
                    android:textColorHint="#AAAAAA"
                    android:textSize="@dimen/font_size_12" />

                <ImageView
                    android:id="@+id/eye_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:contentDescription="Show Password"
                    android:src="@drawable/ic_eye_open" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginEnd="@dimen/space_24"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_16"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_24"
                android:layout_marginEnd="@dimen/space_24"
                android:background="@drawable/item_stoke_16"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="@dimen/space_14"
                android:text="@string/sigin_in"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_14" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_24"
                android:layout_marginEnd="@dimen/space_24"
                android:layout_marginTop="@dimen/space_24"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <View
                    android:layout_width="80dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_32"

                    android:background="@color/color_text_secondary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_8"
                    android:layout_marginEnd="@dimen/space_8"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/or_sign_up_with"
                    android:textColor="@color/color_text_secondary"
                    android:textSize="@dimen/font_size_14" />
                <View
                    android:layout_width="80dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/space_32"
                    android:background="@color/color_text_secondary"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_apple"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_apple"/>
            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="@dimen/space_8"
                android:src="@drawable/ic_google"/>
            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="@dimen/space_8"
                android:src="@drawable/ic_fb"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_8"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/color_text_secondary"
                android:textSize="@dimen/font_size_16" />
            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sigin_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_16" />
        </LinearLayout>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>